[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

# Postgres + SQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros","chrono"] }

# For env vars
dotenvy = "0.15"

# Error handling
anyhow = "1"
hyper = { version = "1.8.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
